# therapist-finder

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_116117.md  CLAUDE.md  README.md  create_apple_script_mails_psychotherapie.py  parse_psychotherapie.py  pyproject.toml  render.yaml  test_api_116117.py
.github/: copilot-instructions.md
.github/agents/: agent-writer.md  api-agent.md  aws-agent.md  cli-agent.md  coordinator.md  deploy-agent.md  email-agent.md  frontend-agent.md  lint-agent.md  macos-agent.md  parser-agent.md  test-agent.md
.github/workflows/: ci.yml  pages.yml  pre-commit.yml  recon.yml
docs/: sources.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/css/: styles.css
frontend/js/: api.js  app.js  i18n.js
frontend/js/i18n/: ar.json  de.json  en.json  es.json  fr.json  it.json  ru.json  tr.json
scripts/: recon_sources.py  translate_ui.py
templates/: email_template.txt
tests/: __init__.py  conftest.py  test_api_contacts.py  test_api_emails.py  test_api_parse_url.py  test_api_search.py  test_email.py  test_parsers.py  test_salutation.py  test_sources.py  test_specialties.py
tests/fixtures/sources/: aeka_detail.html  aeka_list.html  overpass.json  psych_info_detail.html  psych_info_list.html  ptk_detail.html  ptk_list.html  therapie_de_detail.html  therapie_de_list.html
therapist_finder/: __init__.py  cli.py  config.py  models.py
therapist_finder/api/: __init__.py  contacts_store.py  main.py  schemas.py
therapist_finder/api/ai/: __init__.py  mail_generator.py  prompts.py
therapist_finder/api/routes/: contacts.py  emails.py  therapists.py
therapist_finder/email/: __init__.py  generator.py  templates.py
therapist_finder/parsers/: __init__.py  arztsuche_api.py  base.py  pdf_parser.py  text_parser.py
therapist_finder/sources/: __init__.py  _html_scraper.py  arztauskunft_berlin.py  base.py  geocode.py  merger.py  overpass.py  psych_info.py  ptk_berlin.py  rate_limit.py  specialties.py  therapie_de.py
therapist_finder/utils/: __init__.py  applescript_generator.py  file_utils.py  gender.py  salutation.py  text_utils.py
